<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVL" Id="{9d3e762c-652e-46cf-bb07-2ecaaa2ac8c8}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
    C_BUFFER_SIZE : UDINT := 100000;   // buffer satır sayısı (ihtiyacına göre büyüt)
    C_NUM_SENSORS : UINT  := 60;       // sende 60 sensör var demiştin
END_VAR


VAR_GLOBAL
    // Start/Stop
    g_bLogStart       : BOOL := FALSE;
    g_bLogStop        : BOOL := FALSE;
    g_bLogging        : BOOL := FALSE;

    // Epoch ms (sampler doldurur)
    g_epochMs        : ULINT := 0;
	g_epochBaseMs    : ULINT := 0;   // log start anındaki gerçek epoch(ms)
    g_epochOffsetMs  : UDINT := 0; 

    // Ring buffer
    g_aTimeBuffer     : ARRAY[0..C_BUFFER_SIZE-1] OF ULINT;
    g_aValBuffer      : ARRAY[0..C_BUFFER_SIZE-1, 1..C_NUM_SENSORS] OF LREAL;

    g_wrIndex         : UDINT := 0;
    g_rdIndex         : UDINT := 0;
    g_bufferUsed      : UDINT := 0;
    g_bufferOverflow  : BOOL  := FALSE;

    // Sampler burayı dolduracak
    g_arCurrentValues : ARRAY[1..C_NUM_SENSORS] OF LREAL;

    // Dosya yolu / isim
    g_sBasePath       : STRING(255) := 'D:\';   // istediğin klasör
    g_sFileName       : STRING(64);
    g_sPath           : STRING(320);

    // Yazma kontrol
    g_headerPending   : BOOL := FALSE;
    g_lineReady       : BOOL := FALSE;

    // Chunk buffer (data satırları buraya toplanır)
    g_sLine           : STRING(16384);

END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>